<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbTitulo" />

    <TextView
        android:id="@+id/lbGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:text="@string/genero"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbNombre" />

    <TextView
        android:id="@+id/lbFechaN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/f_nacimiento"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgbGenero" />

    <TextView
        android:id="@+id/lbTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="43dp"
        android:text="@string/telefono"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbFechaN" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="onClick_Enviar"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTelefono" />

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="29dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/campo"
        app:layout_constraintStart_toEndOf="@+id/lbNombre"
        app:layout_constraintTop_toBottomOf="@+id/lbTitulo" />

    <EditText
        android:id="@+id/edFechaN"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:onClick="vistaCalendar"
        android:text="@string/campo"
        app:layout_constraintStart_toEndOf="@+id/lbFechaN"
        app:layout_constraintTop_toBottomOf="@+id/rgbGenero" />

    <EditText
        android:id="@+id/edTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="10"
        android:text="@string/campo"
        app:layout_constraintStart_toEndOf="@+id/lbTelefono"
        app:layout_constraintTop_toBottomOf="@+id/edFechaN" />

    <RadioGroup
        android:id="@+id/rgbGenero"
        android:layout_width="217dp"
        android:layout_height="96dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@+id/lbGenero"
        app:layout_constraintTop_toBottomOf="@+id/edNombre">

        <RadioButton
            android:id="@+id/rbtMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/rbtFemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/femenino" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>